--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <base href="http://localhost:3000/">
+    <!-- <base href="http://localhost:3000/"> -->
+    <base href="https://chinmaymishra06.github.io/PathologyReactApp">
     
     <title>Pathology React App</title>
     <!-- Favicon -->
